Done with Module 1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Plalist Project</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="app.js" charset="utf-8"></script>
   </head>
-  <body>
-      
 
+  <body>
+    <div class="container">
+      <div class="topBar">
+      </div>
+      <div class="content">
+        <div class="left">
+          <div class="leftWrapper">
+            <div class="splashTitle">
+              <h1>track bin</h1>
+            </div>
+            <div class="leftButton">
+              <button id="chooseTracks" type="button" onclick="location.href='playlist.html'">Choose Tracks</button>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+        </div>
+        <div class="bottomBar">
+          <p class="footerText">&copy; Chris Jannenga 2017</p>
+        </div>
+      </div>
+    </div>
   </body>
+
 </html>
