--- a/playlist.html
+++ b/playlist.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Playlist Project</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
     <script src="app.js" charset="utf-8"></script>
   </head>
