--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <h1>track bin</h1>
             </div>
             <div class="leftButton">
-              <button id="chooseTracks" type="button" onclick="location.href='playlist.html'">Choose Tracks</button>
+              <button type="button" id="chooseTracks" onclick="pageChange()">Choose Tracks</button>
             </div>
           </div>
         </div>
